force-app/main/default/objects/Trans__c/Trans__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill + Transaction</label>
    <nameField>
        <displayFormat>FBTR-{0000}</displayFormat>
        <label>F/TMS Bill + Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>