force-app/main/default/objects/Trans__c/fields/Amount_CNY__c.field-meta.xml
<CustomField>
    <fullName>Amount_CNY__c</fullName>
    <label>Amount (CNY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>