force-app/main/default/objects/Trans__c/fields/Buying_Cost__c.field-meta.xml
<CustomField>
    <fullName>Buying_Cost__c</fullName>
    <label>Buying Cost</label>
    <referenceTo>Buying_Cost__c</referenceTo>
    <relationshipLabel>F/TMS Bill + Transaction</relationshipLabel>
    <relationshipName>F_TMS_Bill_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>