force-app/main/default/objects/Trans__c/fields/Outbound_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Transaction__c</fullName>
    <label>Outbound Transaction</label>
    <referenceTo>OutboundTransaction__c</referenceTo>
    <relationshipLabel>F/TMS Bill + Transaction</relationshipLabel>
    <relationshipName>F_TMS_Bill_Transaction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>