force-app/main/default/objects/Trans__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Buying_Cost__r.Purchase_Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>